overflow fixed

--- a/scss/base/_initialize.scss
+++ b/scss/base/_initialize.scss
@@ -38,7 +38,9 @@ html {
 html, body {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+}
+body{
+  overflow: auto;
 }
 
 article,
